<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:src="@drawable/logo"
            android:layout_width="680dp"
            android:layout_height="209dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>
        <!-- //Logo -->

        <!-- Error handling -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageView
                    android:id="@+id/imageViewError"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/dialog_error" />
                <TextView
                    android:id="@+id/textViewErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Error!"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp" /><!-- @string/blank -->
            </TableRow>
        </TableLayout>
        <!-- //Error handling -->



        <!-- Table layout -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Email-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </TableRow>
            <!--//Email-->

            <!--DoB-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="2dp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >


                        <Spinner
                            android:id="@+id/spinnerDOBDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <Spinner
                            android:id="@+id/spinnerDOBMonth"
                            android:entries="@array/array_months"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/spinnerDOBYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>


                </TableLayout>

            </TableRow>
            <!--//DoB-->

            <!--Gender-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/gender" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:checked="true"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textViewx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

            </TableRow>
            <!-- //Gender -->

            <!-- Measurement -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurement" />

                <Spinner
                    android:id="@+id/spinnerMeasurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_measurements" />


            </TableRow>
            <!-- //Measurement -->

            <!-- Height -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:layout_marginTop="12dp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editTextHeightCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <EditText
                            android:id="@+id/editTextHeightInches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Height -->

            <!-- Weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:layout_marginTop="12dp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Weight -->

            <!-- Activity Level -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_level"
                    />

                <Spinner
                    android:id="@+id/spinnerActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_activity_levels" />

            </TableRow>
            <!-- //Activity Level -->


            <!-- Submit button -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:layout_marginTop="12dp" />

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:layout_marginTop="12dp" />

            </TableRow>
            <!-- //Submit button -->

        </TableLayout>

    </LinearLayout>

</ScrollView>

